# duckdb_read_lines

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: pipe_smoke_test.sh
src/: line_selection.cpp  parse_lines.cpp  parse_text_lines.cpp  read_lines.cpp  read_lines_extension.cpp  read_text_lines.cpp
src/include/: compat.hpp  line_selection.hpp  read_lines_extension.hpp
test/data/: invalid_utf8.txt  log1.txt  log2.txt  whitespace.txt
test/sql/: read_lines.test  read_lines_line_endings.test  read_lines_shellfs.test
